# python_version

./: README.md  constants.yaml  pyproject.toml  requirements.txt
data/: 9X_meta_df.csv  Approach2.ipynb  Approach3.ipynb  CPI_Dataset.csv  CPI_Dataset.xlsx  CPI_predictions.csv  Only9X_DF.csv  VAR_sector_etf_results.csv  VAR_stock_results.csv  X9.csv  X9_meta.csv  data_handling.ipynb  experiment_results.csv  final_df.csv  forecast-tables.xlsx  fred_data.csv  fred_meta_full_df.csv  full_meta.csv  nowcast-releases.csv  sector_indices.csv  sector_indices_return.csv
data/collected/: collected_data_20250318.csv
data/fred/: fred_downloader.py  main.py
data/meta/: nowcast-variables.csv
data/processed/: 9X_cpi_release_date.csv  Approach11.csv  X_9X.csv  cpi_release_date.csv  final_df_cpi_release_date.csv  processed_data.csv  sector_returns.csv  y_9X.csv  y_final_df.csv
deployment/: create_forecast_tables.py  execute_sql_ddls.py
deployment/sql-ddls/: setup.sql
modules/nowcast_model/: __init__.py  data_collector.py  main.py  utils.py
notebook/: fred_yahoo_data.ipynb
notebook/data/: fred_data.csv
output/: feature_importance.csv  nowcasts.csv  nowcasts_elasticnet.csv  nowcasts_xgboost.csv
output/elasticnet/: feature_importance.csv
output/nowcasts/: nowcasts.csv  prediction_error_stats_daily.csv  prediction_error_stats_period_avg.csv  prediction_errors_daily.csv  (+1 more)
src/: __init__.py  data_collector.py  dataload_9X.py  dataload_full.py  fred_yahoo_data.ipynb  meta_df.csv  model.py  processing.py  processing_improve.py  series_df.csv  test.ipynb
(+58 files in other folders)
